syntax = "proto3";

package grpc;

option go_package = "github.com/vorteil/direktiv/pkg/functions/grpc";

message ReconstructFunctionRequest {
	optional string name = 1;
}
