syntax = "proto3";

package grpc;

option go_package = "github.com/vorteil/direktiv/pkg/isolates/grpc";

message CancelPodRequest {
  optional string actionID = 1;
}
